dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  #namespace: nginx
#  annotations:
#    metallb.io/address-pool: ingress-ip-pool  # Specify the MetalLB IP pool
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
#  type: LoadBalancer
  type: ClusterIP
