dev/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-ingressroute
  #namespace: nginx
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nginx-test.w1.lv`)
      kind: Rule
      services:
        - name: nginx-service
          port: 80
  tls:
    secretName: nginx-certificate-secret
